# codepath

./: .env  .env.example  .gitignore  Cargo.toml  README.md  ROADMAP.md  docker-compose.yml  ollama_result.json  plan.md
docs/: architecture.md
knowledge_packs/: nextjs.json  spring_boot.json
mcp-config/: README.md  claude_desktop.json  cursor.json
plugins/vscode/: package.json
src/: embeddings.rs  lib.rs  main.rs  mcp_server.rs  settings.rs
src/composer/: mod.rs
src/context/: mod.rs
src/context_engine/: context_formatter.rs  git_integration.rs  glob_filter.rs  mod.rs  repo_map.rs  token_counter.rs  tree_generator.rs
src/evaluator/: mod.rs
src/evidence/: mod.rs
src/gatherers/: cdc_adapter.rs  db_adapter.rs  mod.rs  opentelemetry_ingest.rs
src/interpreter/: mod.rs
src/models/: mod.rs
src/parsers/: generic.rs  java.rs  mod.rs
src/storage/: mod.rs  neo4j_adapter.rs  qdrant_adapter.rs  tantivy_adapter.rs
tests/: context_engine_tests.rs  pipeline_tests.rs
ui/: package-lock.json  package.json
ui/src/: App.jsx  index.css
ui/src/components/: DiagnosticConsole.jsx  ModelSettings.jsx  RepoContext.jsx  RepositoryIngester.jsx
workers/java-parser/: pom.xml
workers/java-parser/src/main/java/com/codepath/: JavaASTExtractor.java
