[package]
name = "ai_platform"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
globset = "0.4"
ignore = "0.4.25"
neo4rs = "0.8.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tantivy = "0.25.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-postgres = "0.7.16"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tree-sitter = "0.26.7"
tree-sitter-rust = "0.24.2"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "ai_platform"
path = "src/main.rs"

[[bin]]
name = "codepath-mcp"
path = "src/mcp_server.rs"
